--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.8",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
